refactor & feat: 전체적인 함수 네이밍 구조 개선 및 문자열 속 공백문자 예외종료 기능 구현